Some dark mode styling fixes for UI elements

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -364,17 +364,25 @@ img.invertible-auto:hover {
     transition: filter 0s ease 0.25s;
 }
 
+/*	The loading spinner for object popups (image, iframe, object) is inverted
+	and made more visible in dark mode.
+	*/
+.popupdiv.loading::before {
+	filter: invert(1);
+	opacity: 0.4;
+}
+
 /*	The mode selector is adjusted to be better visible in dark mode, and its
 	button icons inverted.
 	*/
-#mode-selector {
+div#mode-selector {
     opacity: 0.6;
 }
-#mode-selector button::before {
+div#mode-selector button::before {
 	filter: invert(1);
 	opacity: 0.45;
 }
-#mode-selector button.select-mode-light::before {
+div#mode-selector button.select-mode-light::before {
 	opacity: 0.55;
 }
 
